--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blod post</h1>
-    <p>Aca ira todo nuestro parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractitvo e intersante del post</h1>
+            <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
