--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el titulo atractitvo e intersante del post</h1>
             <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer con ramas</p>
