--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
         <div id="post">
             <h1>Este es el titulo atractitvo e intersante del post</h1>
             <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer con ramas</p>
+            <p> parrafo nuevo deonde damos mas detalles del post</p>
         </div>
     </div>
 </body>
