Agregue Suscripcion, cambie la cabecera y el color

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,12 +9,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline"> Tu blog de confianza</span>
+            <span id="tagline"> Tu blog de Maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractitvo e intersante del post</h1>
             <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer con ramas</p>
             <p> parrafo nuevo deonde damos mas detalles del post</p>
+            <p> Suscibete</p>
         </div>
     </div>
 </body>
