--- a/blogpost.html
+++ b/blogpost.html
@@ -8,14 +8,15 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.webp"/>
             Hyperblog
             <span id="tagline"> Tu blog de Cabecera</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractitvo e intersante del post</h1>
             <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer con ramas</p>
-            <p> parrafo nuevo deonde damos mas detalles del post</p>
-            <p> Suscibete</p>
+            <p> parrafo nuevo donde daremos mas detalles del post</p>
+            <p> Suscibete para mas contenido</p>
         </div>
     </div>
 </body>
