--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,9 @@
             <p> parrafo nuevo deonde damos mas detalles del post</p>
             <p> Suscibete</p>
         </div>
+        <div id="footer">
+            Hecho con amor ❤️
+        </div>
     </div>
 </body>
 </html>
