--- a/blogpost.html
+++ b/blogpost.html
@@ -13,10 +13,10 @@
             <span id="tagline"> Tu blog de Cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractitvo e intersante del post</h1>
-            <p>Este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer con ramas</p>
-            <p> parrafo nuevo donde daremos mas detalles del post</p>
-            <p> Suscibete para mas contenido</p>
+            <h1>Este es el título atractitvo e intersante del post</h1>
+            <p>Este es el parrafo de inicio donde vamos a explicar las cosas increíbles que podemos hacer con ramas</p>
+            <p> parrafo nuevo donde daremos más detalles del post</p>
+            <p> Suscibete para más contenido</p>
         </div>
         <div id="footer">
             Hecho con amor ❤️
